[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wsl-dev-kit"
version = "2.0.0"
description = "Unified Browser Debug Bridge for Windows/WSL development"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.scripts]
wsl-dev = "wsl_dev_kit:main"
